--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Snag</h1>
 
-<p><%= link_to "Need a beer?", new_request_path %></p>
-<p><%= link_to "Snag one for a friend", requests_open_path %></p>
+<p><%= link_to "Log in", requests_open_path %></p>
+<p><%= link_to "Register", new_request_path %></p>
