added _form to user views
added _form for new and edit in user views.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,3 @@
 <h1>Create an Account</h1>
+<%= render 'form'%>
 
-<h3><%= form_for @user do |form| %>
-<h3><%= form.label :name, 'Full Name'%>
-<%= form.text_field :name %></h3>
-<h4>Module: <%= form.collection_select :mod_id, @mods, :id, :name %>
-<%= form.submit %>
-<% end %>
