--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,8 +15,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :module_id %>
-    <%= f.text_field :module_id, class: 'form-control', required: true %>
+    <%= f.label :mod_id %>
+    <%= f.collection_select :mod_id, @mods, :id, :name%>
   </div>
 
   <div class="form-group">
