--- a/app/views/mods/_form.html.erb
+++ b/app/views/mods/_form.html.erb
@@ -1,5 +1,5 @@
 <h3><%= form_for @mod do |form| %>
-<h3><%= form.label :name, 'Full Name'%>
+<h3><%= form.label :name, 'Name'%>
 <%= form.text_field :name %></h3>
 <%= form.submit %></h4>
 <% end %>
