--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,13 +5,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, class: 'form-control', required: true %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name, class: 'form-control', required: true %>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control', required: true %>
   </div>
 
   <div class="form-group">
