--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,33 +8,23 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Snag</title>
-
-    <nav class="navbar navbar-inverse">
-      <div class="col">
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <%= link_to 'Snag', root_path, class: 'navbar-brand' %>
-        </div>
+          <a class="navbar-brand" href="#">SNAG</a>
       </div>
-      <div class="col">
-        <div id="navbar">
-          <ul class="nav navbar-nav">
-          <li><%= link_to "SNAG", root_path %></li>
-          <li><%= link_to "BEERS", beers_path %></li>
-          <li><%= link_to "ASK FOR A SNAG", new_request_path %></li>
-          <li><%= link_to "SNAG ONE FOR A FRIEND", beers_path %></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/beers">Beers</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Snag a beer for a friend!</a></li>
+        <li class="nav-item"><a class="nav-link" href="/requests/new">Request a beer!</a></li>
+      </ul>
+      <ul class="navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link" href="/users/new"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </nav>
 
     <div class="container">
 
