added div to everything for css file

--- a/app/views/mods/_form.html.erb
+++ b/app/views/mods/_form.html.erb
@@ -1,5 +1,7 @@
+<div>
 <h3><%= form_for @mod do |form| %>
 <h3><%= form.label :name, 'Name'%>
 <%= form.text_field :name %></h3>
 <%= form.submit %></h4>
 <% end %>
+</div>
