--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the Requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+   }
+  
+   h1, h2 {
+     color: rgb(9, 56, 9);
+     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     text-transform: uppercase;
+   }
+  
+   h1 {
+     font-size: 40px;
+   }
+  
+   h2 {
+     font-size: 30px;
+   }
+  
+   h3 {
+     color: rgb(46, 45, 45);
+     font-size: 25px
+   }
+   
+   h4 {
+    color: rgb(62, 61, 61);
+    font-size: 20px
+  }
+  
+  p {
+    color: rgb(34, 33, 33);
+    text-align: justify
+  }
