--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,11 +14,97 @@
  *= require_self
  */
 
-  @import "bootstrap";
+ body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+ }
 
-.nav > li > span {
-  display: block;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  color: #9d9d9d;
+ h1, h2 {
+   color: rgb(9, 56, 9);
+   font-family: Arial, Helvetica, sans-serif;
+   text-transform: uppercase;
+ }
+
+ h1 {
+   font-size: 40px;
+   text-decoration: none;
+ }
+
+ h2 {
+   font-size: 30px;
+ }
+
+ h3 {
+   color: rgb(46, 45, 45);
+   font-size: 25px
+ }
+ 
+ h4 {
+  color: rgb(62, 61, 61);
+  font-size: 20px
+}
+
+p {
+  color: rgb(34, 33, 33);
+  text-align: justify
+}
+
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+
+.title:link,
+.title:visited {
+  padding: 4px 0;
+  text-decoration: none;
+  color: rgb(3, 44, 3);
+  font-size: 30px;
+  letter-spacing: 4px;
+  transition: background-color 0.2s;
+  padding: 10px, 30px;
+  text-align: left
+}
+
+.title:hover, 
+.title:active {
+  border-bottom: 2px solid rgb(3, 44, 3);
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s;
+}
+
+.beer-image {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.main-nav li {
+  display: inline-block;
+  margin-left: 80px; 
+}
+
+.main-nav li a:link, 
+.main-nav li a:visited {
+  padding: 4px 0;
+  color: rgb(3, 44, 3);
+  text-decoration: none;
+  text-transform: none;
+  font-size: 18px; 
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover, 
+.main-nav li a:active {
+  border-bottom: 2px solid rgb(3, 44, 3);
 }
