--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <div class="row">
-          <img src="./img/drawing-beer.png" alt="beer" class="beer-image">
+          <img src="public/beer-image.png" alt="beer" class="beer-image">
           <ul class="main-nav">
             <li><a class=title href="/">SNAG</a></li>
             <li><a href="/beers">Beers</a></li>
