added locations controller and locations to requests controller

--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -5,6 +5,7 @@
   <p>
     <%= f.label "Pick a beer: ", id:"beer_id" %>
     <%= f.collection_select :beer_id, @beers.sort, :id, :name %>
+    <%= f.collection_select :location_id, @locations.sort, :id, :name %>
   </p>
 
   <%= f.submit %>
