snag confirm page completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-  <head>  
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" type ="text/css" href="app/assets/stylesheets/application.scss">
-    <link rel="stylesheet" type ="text/css" href="app/assets/stylesheets/beers.scss">
-    <link rel="stylesheet" type ="text/css" href="app/assets/stylesheets/mods.scss">
-    <link rel="stylesheet" type ="text/css" href="app/assets/stylesheets/requests.scss">
-    <link rel="stylesheet" type ="text/css" href="app/assets/stylesheets/users.scss">
+
     <title>Snag it!</title>
   </head>
 
@@ -20,17 +16,21 @@
     <header>
       <nav>
         <div class="row">
-          <img src="./img/drawing-beer.png" alt="beer" class="beer-image">
+          <a href=<%= root_path %>><img src="./img/drawing-beer.png" alt="beer" class="beer-image">
           <ul class="main-nav">
             <li><a class=title href="/">SNAG</a></li>
-            <li><a href="/beers">Beers</a></li>
-            <li><a href="/requests/new">Request a beer!</a></li>
+            <li><a href=<%= beers_path %>>Beers</a></li>
+            <li><a href=<%= new_request_path %>>Request a beer!</a></li>
             <li><a href="#">Snag a beer for a friend!</a></li>
-            <li><a href="/users/new">Login/Sign Up</a></li>
+            <% if logged_in? %>
+              <li><a href=<%= log_out_path %>>Logout</a></li>
+            <% else %>
+              <li><a href=<%= sign_up_path %>>Login/Sign Up</a></li>
+            <% end %>
           </ul>
         </div>
       </nav>
-        
+
     </header>
    <div class="container">
 
