--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <title>Snag it!</title>
   </head>
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <div class="row">
-          <a href=<%= root_path %>><img src="./img/drawing-beer.png" alt="beer" class="beer-image">
+           <!-- <%# <a href=<%= root_path %>><img src="./img/beer2.png" alt="beer" class="beer-image"> %> -->
           <ul class="main-nav">
             <li><a class=title href="/">SNAG</a></li>
             <li><a href=<%= beers_path %>>Beers</a></li>
@@ -32,6 +32,7 @@
       </nav>
 
     </header>
+
 
       <% if flash.any? %>
         <% flash.each do |type, message| %>
