added locations to allowed params

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Thanks for snagging that!</h1>
 
 <p>
-<%= @requester.name %> is sitting at location, waiting anxiously.
+<%= @requester.name %> is in <%= %>, waiting anxiously.
 </p>
