--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -6,11 +6,13 @@
     <%= f.label "Pick a beer: ", id:"beer_id" %>
     <%= f.collection_select :beer_id, @beers.sort, :id, :name %>
   </p>
+
   <p>
     <%= f.label "Where are you? ", id:"location_id" %>
     <%= f.collection_select :location_id, @locations.sort, :id, :name %>
   </p>
 
+    <%= f.hidden_field :requester_id, value:current_user.id %>
   <%= f.submit %>
 
 <% end %>
