--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
           <ul class="main-nav">
             <li><a class=title href="/">SNAG</a></li>
             <li><a href=<%= beers_path %>>Beers</a></li>
-            <li><a href=<%= new_request_path %>>Request a beer!</a></li>
-            <li><a href="#">Snag a beer for a friend!</a></li>
+            <li><a href=<%= new_request_path %>>Request a beer</a></li>
+            <li><a href="#">Snag a beer for a friend</a></li>
             <% if logged_in? %>
               <li><a href=<%= log_out_path %>>Logout</a></li>
             <% else %>
