--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -3,3 +3,13 @@
 <p>
   <%= @requester.name %> is in <%= @location.name %>, waiting anxiously.
 </p>
+<%= form_tag(request_path, method:"snag") do %>
+    <%= hidden_field_tag :id, snag.id %>
+    <%= hidden_field_tag :request.status, "closed" %>
+    <%= submit_tag "Beer Delivered" %>
+  <%end%>
+  <%= form_tag(request_path, method:"snag") do %>
+    <%= hidden_field_tag :id, snag.id %>
+    <%= hidden_field_tag :request.status, "open" %>
+    <%= submit_tag "Sorry, can't Snag it!" %>
+  <%end%>
