--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,33 +1,4 @@
-<h1>Welcome to Snag</h1>
-<% if @current_snag.nil?%>
-  <ul>
-    <% @snags.each do |snag| %>
-      <li><%= snag.beer.name %>
-        <%= form_tag(snag_path, method:"update") do %>
-          <%= hidden_field_tag :snagger_id, current_user.id %>
-          <%= hidden_field_tag :id, snag.id %>
-          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-          <%= submit_tag "SNAG IT" %>
-        <% end %>
-      </li>
-    <% end %>
-    <div><%= link_to "ASK FOR A SNAG", new_request_path %></div>
-  </ul>
+Page shows options to log in or register
 
-<% else %>
-
-  <h4>You're currently snagging <%= @current_snag_for.name %> a <%= @current_snag.beer.name %> - they're waiting in <%= @current_snag.location.name %>!</h4>
-  <%= form_tag(request_path, method:"snag") do %>
-    <%= hidden_field_tag :id, snag.id %>
-    <%= hidden_field_tag :request.status, "closed" %>
-    <%= submit_tag "Beer Delivered" %>
-  <%end%>
-  <%= form_tag(request_path, method:"snag") do %>
-    <%= hidden_field_tag :id, snag.id %>
-    <%= hidden_field_tag :request.status, "open" %>
-    <%= submit_tag "Sorry, can't Snag it!" %>
-  <%end%>
-<% end %>
-
-
-
+<p><%= link_to "Log in", log_in_path %></p>
+<p><%= link_to "Sign up", sign_up_path %></p>
