--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,17 +1,4 @@
 <h1>Thanks for snagging that!</h1>
 
-<p>
-  <%= @requester.name %> is in <%= @location.name %>, waiting anxiously.
-</p>
-<%= form_tag(request_path, method:"patch") do %>
-    <%= hidden_field_tag :id, @request.id %>
-    <%= hidden_field_tag :status, "closed" %>
-    <%= submit_tag "Beer Delivered" %>
-  <%end%>
-
-  <%= form_tag(request_path, method:"patch") do %>
-    <%= hidden_field_tag :id, @request.id %>
-    <%= hidden_field_tag :status, "open" %>
-    <%= submit_tag "Sorry, can't Snag it!" %>
-  <%end%>
+<% render 'form'%>
 
