--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,31 +7,37 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.8.2/css/all.css” integrity=“sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay” crossorigin=“anonymous”>
+  <link rel=“stylesheet” href=“https://bootswatch.com/4/yeti/bootstrap.min.css”>
 
     <title>Snag it!</title>
   </head>
 
   <body>
-    <header>
-      <nav>
-        <div class="row">
-           <!-- <%# <a href=<%= root_path %>><img src="./img/beer2.png" alt="beer" class="beer-image"> %> -->
-          <ul class="main-nav">
-            <li><a class=title href="/">SNAG</a></li>
-            <li><a href=<%= beers_path %>>Beers</a></li>
-            <li><a href=<%= new_request_path %>>Request a beer</a></li>
-            <li><a href="#">Snag a beer for a friend</a></li>
-            <% if logged_in? %>
-              <li><a href=<%= log_out_path %>>Logout</a></li>
-            <% else %>
-              <li><a href=<%= sign_up_path %>>Login/Sign Up</a></li>
-            <% end %>
+      <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">SNAG</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/beers">Beers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/requests/new">Request a Beer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Snag a beer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login/Sign Up</a>
+            </li>
           </ul>
         </div>
       </nav>
 
-    </header>
 
 
       <% if flash.any? %>
