--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -17,20 +17,19 @@
 
 <% else %>
 
-  <h4>You're currently snagging <%= @current_snag_for.name %> a <%= @current_snag.beer.name %> - they're waiting in <%= @current_snag.location.name %>!</h4>
-  <% @snags.each do |snag| %>
-  <%= form_tag(request_path, method:"snag") do %>
-    <%= hidden_field_tag :id, snag.id %>
-    <%= hidden_field_tag :request.status, "closed" %>
+  <%= form_tag(request_path(@current_snag), method:"patch") do %>
+    <%= hidden_field_tag :id, @current_snag.id %>
+    <%= hidden_field_tag :status, "closed" %>
     <%= submit_tag "Beer Delivered" %>
   <%end%>
-  <% @snags.each do |snag| %>
-  <%= form_tag(request_path, method:"snag") do %>
-    <%= hidden_field_tag :id, snag.id %>
-    <%= hidden_field_tag :request.status, "open" %>
+
+  <%= form_tag(request_path(@current_snag), method:"patch") do %>
+    <%= hidden_field_tag :id, @current_snag.id %>
+    <%= hidden_field_tag :status, "open" %>
     <%= submit_tag "Sorry, can't Snag it!" %>
   <%end%>
-<% end %>
+
+<% end %><br>
 
 
 <div><%= link_to "ASK FOR A SNAG", new_request_path %></div>
