--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,24 +16,30 @@
 
   <body>
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">SNAG</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-        </button>
+        <% if logged_in? %>
+        <a class="navbar-brand" href=<%= requests_path %>>SNAG</a>
+        <% else %>
+        <a class="navbar-brand" href=<%= log_in_path %>>SNAG</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/beers">Beers</a>
+              <a class="nav-link" href=<%= beers_path %>>Beers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/requests/new">Request a Beer</a>
+              <a class="nav-link" href=<%= new_request_path %>>Request a Beer</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Snag a beer</a>
             </li>
+            <% if logged_in? %>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login/Sign Up</a>
+              <a class="nav-link" href=<% log_out_path %>>Logout</a>
             </li>
+            <%else%>
+            <li class="nav-item">
+              <a class="nav-link" href=<% sign_up_path %>>Login/Sign Up</a>
+            </li>
+            <%end%>
           </ul>
         </div>
       </nav>
