--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,5 +24,6 @@
     <%= f.password_field :password_confirmation, class: 'form-control', required: true %>
   </div>
 
-  <%= f.submit 'Register', class: 'btn btn-primary btn-lg' %>
+  <%= f.submit 'Register', class: 'btn btn-info btn-lg' %> 
+  
 <% end %>
