--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,100 +14,14 @@
  *= require_self
  */
 
- body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+ <style>
+ .navbar {
+     padding-left: 0;
+     padding-right: 0;
  }
-
- h1, h2 {
-   color: rgb(9, 56, 9);
-   font-family: Arial, Helvetica, sans-serif;
-   text-transform: uppercase;
+ .navbar-expand > .container,
+ .navbar-expand > .container-fluid {
+     padding-right: 15px;
+     padding-left: 15px;
  }
-
- h1 {
-   font-size: 40px;
-   text-decoration: none;
- }
-
- h2 {
-   font-size: 30px;
- }
-
- h3 {
-   color: rgb(46, 45, 45);
-   font-size: 25px
- }
- 
- h4 {
-  color: rgb(62, 61, 61);
-  font-size: 20px
-}
-
-p {
-  color: rgb(34, 33, 33);
-  text-align: justify
-}
-
-.row {
-  max-width: 1140px;
-  display: block
-}
-
-.beer-image {
-  height: 100px;
-  width: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.main-nav {
-  list-style: none;
-  margin-top: 5px;
-  margin-bottom: 20px;
-  display: inline-block;
-  padding-inline-start: 5px;
-  text-align: right
-}
-
-.main-nav li {
-  display: inline-block;
-  margin-left: 80px; 
-}
-
-.main-nav li a:link, 
-.main-nav li a:visited {
-  padding: 4px 0;
-  color: rgb(3, 44, 3);
-  text-decoration: none;
-  text-transform: none;
-  font-size: 18px; 
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s;
-}
-
-.main-nav li a:hover, 
-.main-nav li a:active {
-  border-bottom: 2px solid rgb(3, 44, 3);
-}
-
-.title:link,
-.title:visited {
-  padding: 4px 0;
-  text-decoration: none;
-  color: rgb(3, 44, 3);
-  font-size: 60px;
-  letter-spacing: 2px;
-  transition: background-color 0.2s;
-  text-align: left;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  border-bottom: 2px solid transparent;
-  transition: border-bottom 0.2s;
-}
-
-
-.title:hover, 
-.title:active {
-  border-bottom: 2px solid rgb(3, 44, 3);
-}
+</style>
