--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,4 @@
+<div class="ml-3">
 <h1>Thanks for snagging that!</h1>
 
 <p>
@@ -16,3 +17,4 @@
 
     <%= submit_tag "Sorry, can't Snag it!" %>
   <%end%>
+  </div>
