--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,4 +1,5 @@
-<h1>All Beers</h1>
+<div class="ml-3">
+<h1>Beers</h1>
 
 <% if current_user.currently_requesting %>
   <p><a href="/requests/new" class="btn btn-info btn-sm" role="button" aria-pressed="true">Request a Beer!</a></p>
@@ -13,3 +14,4 @@
   </div>
 
 <% end %>
+</div>
