--- a/app/views/mods/_form.html.erb
+++ b/app/views/mods/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="ml-3">
 <h3><%= form_for @mod do |form| %>
 <h3><%= form.label :name, 'Name'%>
 <%= form.text_field :name %></h3>
