--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p>
   <%= @requester.name %> is in <%= @location.name %>, waiting anxiously.
 </p>
@@ -12,3 +13,4 @@
     <%= hidden_field_tag :status, "open" %>
     <%= submit_tag "Sorry, can't Snag it!" %>
   <%end%>
+  </div>
