--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,4 @@
+<div class="ml-3">
 <h1>Welcome to Snag</h1>
 <% if @currently_snagging.nil?%>
   <h3>Open Requests</h3>
@@ -50,6 +51,8 @@
     <div>Your <%= @currently_requesting.beer.name %> is on the way, courtesy of <%= @currently_requesting.snagger.name %>!  </div>
   <% end %>
 <% end %>
+</div>
+
 
 
 
