--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="ml-3">
 <%= form_for @user do |f| %>
   <div class="form-group">
     <%= f.label :username %>
@@ -27,3 +28,4 @@
   <%= f.submit 'Register', class: 'btn btn-info btn-lg' %> 
   
 <% end %>
+</div>
