--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="ml-3">
 <h1>Edit User</h1>
 <%= render 'form' %>
 
 <%= form_tag user_path, method: "delete" do %>
 <%= submit_tag "Delete User" %>
 <% end %>
+</div>
