--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,12 @@
-Page shows options to log in or register
 
-<p><%= link_to "Log in", log_in_path %></p>
-<p><%= link_to "Sign up", sign_up_path %></p>
+<div class="mt-5">
+<div class="ml-3">
+<h1><a href=<%= log_in_path %> class="btn btn-info btn-lg" role="button" aria-pressed="true">Log In</a></h1>
+</div>
+
+<div class="ml-3">
+<h1><a href=<%= sign_up_path %> class="btn btn-info btn-lg" role="button" aria-pressed="true">Sign Up</a></h1>
+</div>
+</div>
+
+
