background buttons and margins

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -5,12 +5,12 @@
 <%= form_tag(request_path, method:"patch") do %>
     <%= hidden_field_tag :id, @request.id %>
     <%= hidden_field_tag :status, "closed" %>
-    <%= submit_tag "Beer Delivered" %>
+    <%= submit_tag "Beer Delivered", class: 'btn btn-success btn-lg' %>
   <%end%>
 
   <%= form_tag(request_path, method:"patch") do %>
     <%= hidden_field_tag :id, @request.id %>
     <%= hidden_field_tag :status, "open" %>
-    <%= submit_tag "Sorry, can't Snag it!" %>
+    <%= submit_tag "Sorry, can't Snag it!", class: 'btn btn-danger btn-lg' %>
   <%end%>
   </div>
