--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="mt-3">
 <div class="ml-3">
 <h1>Edit User</h1>
 <%= render 'form' %>
@@ -5,4 +6,5 @@
 <%= form_tag user_path, method: "delete" do %>
 <%= submit_tag "Delete User" %>
 <% end %>
+</div>
 </div>
