--- a/app/views/welcome/leaderboards.html.erb
+++ b/app/views/welcome/leaderboards.html.erb
@@ -1,3 +1,5 @@
+<div class="mt-3">
+<div class="ml-3">
 <h1>Leaderboards</h1>
 
 <h3>Most Snagtastic</h3>
@@ -12,3 +14,5 @@
       </tr>
       <% end %>
   </table>
+  </div>
+  </div>
