--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,8 +1,9 @@
+<div class="mt-3">
 <div class="ml-3">
 <h1>Beers</h1>
 
 <% if current_user.currently_requesting %>
-  <p><a href="/requests/new" class="btn btn-info btn-sm" role="button" aria-pressed="true">Request a Beer!</a></p>
+  <p><a href="/requests/new" class="btn btn-info btn-lg" role="button" aria-pressed="true">Request a Beer!</a></p>
 <%end%>
 
 <% @beers.each do |beer| %>
@@ -14,4 +15,5 @@
   </div>
 
 <% end %>
+</div>
 </div>
