--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,4 @@
+<div class="mt-3">
 <div class="ml-3">
 <h1>Welcome to Snag</h1>
 <% if @currently_snagging.nil?%>
@@ -10,7 +11,7 @@
           <%= hidden_field_tag :id, request.id %>
           <%= hidden_field_tag "request[snagger_id]", current_user.id %>
           <%= hidden_field_tag "request[status]", "in progress" %>
-          <%= submit_tag "SNAG IT" %>
+          <%= submit_tag "SNAG IT", class: 'btn btn-info btn-sm' %>
         <% end %>
       </li>
     <% end %>
@@ -22,14 +23,14 @@
   <%= form_tag(request_path(@currently_snagging), method:"patch") do %>
     <%= hidden_field_tag :id, @currently_snagging.id %>
     <%= hidden_field_tag "request[status]", "closed" %>
-    <%= submit_tag "Beer Delivered" %>
+    <%= submit_tag "Beer Delivered", class: 'btn btn-sucess btn-lg' %>
   <%end%>
 
   <%= form_tag(request_path(@currently_snagging), method:"patch") do %>
     <%= hidden_field_tag :id, @currently_snagging.id %>
     <%= hidden_field_tag "request[status]", "open" %>
     <%= hidden_field_tag "request[snagger_id]", nil %>
-    <%= submit_tag "Sorry, can't Snag it!" %>
+    <%= submit_tag "Sorry, can't Snag it!", class: 'btn btn-danger btn-lg' %>
   <% end %>
 
 <% end %>
@@ -37,7 +38,7 @@
 <% if @currently_requesting.nil? %>
   <div>
     <%= form_tag new_request_path, method:"get" do %>
-      <%= submit_tag 'Request a beer' -%>
+      <%= submit_tag 'Request a beer', class: 'btn btn-info btn-lg' %>
     <% end %>
   </div>
 <% else %>
@@ -46,13 +47,14 @@
     <%= form_tag new_request_path, method:"patch" do %>
       <%= hidden_field_tag :id, @currently_requesting.id %>
       <%= hidden_field_tag "request[status]", "closed" %>
-      <%= submit_tag 'Cancel this request' %>
+      <%= submit_tag 'Cancel this request', class: 'btn btn-secondary btn-lg' %>
     <% end %>
 
   <% elsif @currently_requesting.status == "in progress" %>
     <div>Your <%= @currently_requesting.beer.name %> is on the way, courtesy of <%= @currently_requesting.snagger.name %>!  </div>
   <% end %>
 <% end %>
+</div>
 </div>
 
 
