--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,4 @@
+<div class="mt-3">
 <div class="ml-3">
 <h1>Thanks for snagging that!</h1>
 
@@ -15,4 +16,5 @@
     <%= hidden_field_tag "request[status]", "bailed" %>
     <%= submit_tag "Sorry, can't Snag it!" %>
   <%end%>
+  </div>
   </div>
