beer table changed
beer table in beer index view page and layout margins

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,19 +1,27 @@
-<div class="mt-3">
-<div class="ml-3">
+<div class="m-3">
 <h1>Beers</h1>
 
 <% if current_user.currently_requesting %>
   <p><a href="/requests/new" class="btn btn-info btn-lg" role="button" aria-pressed="true">Request a Beer!</a></p>
 <%end%>
 
-<% @beers.each do |beer| %>
-  <div>
-    <h2><%= beer.name %></h2>
-    <p><%= beer.abv %>% ABV</p>
-    <p><%= beer.description %></p>
-	  <br>
-  </div>
-
-<% end %>
-</div>
-</div>
+<table class="table table-borderless" style="width:50%">
+  <thead>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col">Name</th>
+      <th scope="col">ABV</th>
+      <th scope="col">Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+    <% @beers.each do |beer| %>
+      <td>Image</td>
+      <td><%= beer.name %></td>
+      <td><%= beer.abv %>% ABV</td>
+      <td><%= beer.description %></td>
+    </tr>
+    <%end%>
+  </tbody>
+</table>
