--- a/app/views/welcome/closed.html.erb
+++ b/app/views/welcome/closed.html.erb
@@ -1,7 +1,5 @@
-<div class="mt-3">
-<div class="ml-3">
+<div class="m-3">
 <a href=root><img src="/img/61392.png" alt="The bar is closed" height=700></img></a>
 <h3>The bar is closed, sorry!  Please come back at 3 PM.</h3>
 <p><i>Image courtesy of Rawpixel</i></p>
-</div>
 </div>
