--- a/app/views/welcome/leaderboards.html.erb
+++ b/app/views/welcome/leaderboards.html.erb
@@ -1,5 +1,4 @@
-<div class="mt-3">
-<div class="ml-3">
+<div class="m-3">
 <h1>Leaderboards</h1>
 <br>
 <div>
@@ -87,3 +86,5 @@
     <% end %>
   </table>
 </div>
+</div>
+
