--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="ml-3">
+<div class="m-3">
 <h1><%= @beer.name %></h1>
 <h4>Abv<%=@beer.abv%></h4>
 <h4>Description<%=@beer.description%></h4>
