--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,4 @@
-<div class="mt-3">
-<div class="ml-3">
+<div class="m-3">
 <h1>Want me to bring one back for you?</h1>
 
 <div>
@@ -21,4 +20,4 @@
 <% end %>
 </div>
 </div>
-</div>
+
