--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,4 @@
-<div class="mt-3">
-<div class="ml-3">
+<div class="m-3">
 <h1>Edit User</h1>
 <%= render 'form' %>
 
@@ -7,4 +6,4 @@
 <%= submit_tag "Delete User" %>
 <% end %>
 </div>
-</div>
+
