beer tables edited layout

--- a/app/views/welcome/leaderboards.html.erb
+++ b/app/views/welcome/leaderboards.html.erb
@@ -2,109 +2,112 @@
 <h1>Leaderboards</h1>
 <br>
 
-<div>
-  <h3>🍺 Most Popular Beers 🍺</h3>
-  <h5> 🎉 Our most requested beers 🎉 </h5>
-  <table style="width:50%">
-    <tr>
-      <th>Beer</th>
-      <th>Times Requested</th>
-    </tr>
-    <% Beer.most_popular.sort_by {|beer, count| count }.reverse!.each do |beer| %>
+  <h5>MOST POPULAR BEERS 🍺</h5>
+  <h5> Our most requested beers 🎉 </h5>
+  <table class="table table-borderless table table-sm" style="width:30%">
+    <thead>
       <tr>
-        <td><%= beer[0].name %></td>
-        <td><%= beer[1] %></td>
+        <th scope="col">Beer</th>
+        <th class="text-center">Times Requested</th>
       </tr>
-    <% end %>
-  </table>
-</div>
-
-<br>
-
-<div>
-<h3>Most Snagtastic</h3>
-<h5>🍻 These folks snag more than they request 🍻</h5>
-  <table style="width:50%">
-    <tr>
-      <th>Name</th>
-      <th>Times they snagged</th>
-      <th>Times they requested</th>
-      <th>Ratio</th>
-    </tr>
-    <% @users.sort_by {|user| user.snag_ratio }.reverse![0..5].each do |user| %>
+    </thead>
+    <tbody>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.completed_snags.length %></td>
-        <td><%= user.fulfilled_requests.length %></td>
-        <td><%= '%.2f' % user.snag_ratio %></td>
+        <% Beer.most_popular.sort_by {|beer, count| count }.reverse!.each do |beer| %>
+          <td><%= beer[0].name %></td>
+          <td class="text-center"><%= beer[1] %></td>
       </tr>
-    <% end %>
+      <%end%>
+    </tbody>
   </table>
-</div>
 
+ <br>
 
-<br>
-<br>
-
-<div>
-  <h3>Most Prolific Snaggers</h3>
-  <h5>🍻 These snaggers have helped out more people 🍻</h5>
-  <table style="width:50%">
-    <tr>
-      <th>Name</th>
-      <th>People they've snagged for</th>
-    </tr>
-    <% @users.sort_by {|user| user.unique_receivers.length }.reverse![0..5].each do |user| %>
+  <h5>MOST SNAGTASTIC</h5>
+  <h5>These folks snag more than they request 🍻</h5>
+  <table class="table table-borderless table table-sm" style="width:30%">
+    <thead>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.unique_receivers.length %></td>
+        <th scope="col">Name</th>
+        <th class="text-center">Snagged</th>
+        <th class="text-center">Requested</th>
+        <th class="text-right">Ratio</th>
       </tr>
-    <% end %>
-  </table>
-</div>
-
-<br>
-<br>
-
-<div>
-  <h3>The Mooch List</h3>
-  <h5> 😬 These folks have great friends... 😬 </h5>
-  <table style="width:50%">
-    <tr>
-      <th>Name</th>
-      <th>Times they snagged</th>
-      <th>Times they requested</th>
-      <th>Ratio</th>
-    </tr>
-    <% @users.sort_by {|user| user.snag_ratio }[0..5].each do |user| %>
+    </thead>
+    <tbody>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.completed_snags.length %></td>
-        <td><%= user.fulfilled_requests.length %></td>
-        <td><%= '%.2f' % user.snag_ratio %></td>
+        <% @users.sort_by {|user| user.snag_ratio }.reverse![0..5].each do |user| %>
+          <td><%= user.name %></td>
+          <td class="text-center"><%= user.completed_snags.length %></td>
+          <td class="text-center"><%= user.fulfilled_requests.length %></td>
+          <td class="text-right"><%= '%.2f' % user.snag_ratio %></td>
       </tr>
-    <% end %>
+      <%end%>
+    </tbody>
   </table>
-</div>
-
-<br>
-<br>
-
-<div>
-  <h3>🍺 Most Prolific...well. 🍺</h3>
-  <h5> 🍻 These are our favorite users! 🍻 </h5>
-  <table style="width:50%">
-    <tr>
-      <th>Name</th>
-      <th>Requests</th>
-    </tr>
-    <% @users.sort_by {|user| user.fulfilled_requests.length }.reverse![0..5].each do |user| %>
+ 
+ <br>
+<h5>MOST PROLIFIC SNAGGERS </h5>
+  <h5>These snaggers have helped out more people 🍻 </h5>
+  <table class="table table-borderless table table-sm" style="width:25%">
+    <thead>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.fulfilled_requests.length %></td>
+        <th scope="col">Name</th>
+        <th class="text-center">People they've snagged for</th>
       </tr>
-    <% end %>
+    </thead>
+    <tbody>
+      <tr>
+        <% @users.sort_by {|user| user.unique_receivers.length }.reverse![0..5].each do |user|  %>
+          <td><%= user.name %></td>
+          <td class="text-center"><%= user.unique_receivers.length %></td>
+      </tr>
+      <%end%>
+    </tbody>
   </table>
-</div>
-</div>
+
+ <br>
+<h5>THE MOOCH LIST</h5>
+  <h5>These folks have great friends... 😬</h5>
+  <table class="table table-borderless table table-sm" style="width:30%">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th class="text-center">Snagged</th>
+        <th class="text-center">Requested</th>
+        <th class="text-right">Ratio</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <% @users.sort_by {|user| user.snag_ratio }[0..5].each do |user| %>
+          <td><%= user.name %></td>
+          <td class="text-center"><%= user.completed_snags.length %></td>
+          <td class="text-center"><%= user.fulfilled_requests.length %></td>
+          <td class="text-right"><%= '%.2f' % user.snag_ratio %></td>
+      </tr>
+      <%end%>
+    </tbody>
+  </table>
+<br>
+
+<h5>MOST PROLIFIC... well 🍺</h5>
+  <h5>These are our favourite users! 🍻 </h5>
+  <table class="table table-borderless table table-sm" style="width:20%">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th class="text-center">Drinks</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <% @users.sort_by {|user| user.fulfilled_requests.length }.reverse![0..5].each do |user|  %>
+          <td><%= user.name %></td>
+          <td class="text-center"><%= user.fulfilled_requests.length %></td>
+      </tr>
+      <%end%>
+    </tbody>
+  </table>
+
 
