--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -18,7 +18,7 @@
     <tr>
     <% @beers.each do |beer| %>
       <td><%= image_tag(beer.image)%></td>
-      <td><%= beer.name %></td>
+      <td><h5><%= beer.name %></h5></td>
       <td><%= beer.abv %>% ABV</td>
       <td><%= beer.description %></td>
     </tr>
